--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
         <head>
+                <link rel="icon" type="image/png" href="img/anonimo.png" />
                 <meta charset="UTF-8">
-                <title>Pagina con animaciones</title>
+                <title>Cryptojacking-inicio</title>
                 <!--iconos -->
                 <!-- reference your copy Font Awesome here (from our CDN or by hosting yourself) -->
                 <script src="https://kit.fontawesome.com/3809a1fb59.js" crossorigin="anonymous"></script>
@@ -14,22 +15,24 @@
         <body>
                 <section class="header">
                         <nav>
-                                <a href="/"><h1 class='nav-bar' >bue221</h1></a>
+                                
+                                <a href="/"><h1 class='nav-bar' >Cryptojacking</h1></a>
                                 <ul>
                                         <li><a href="#">Inicio</a></li>
-                                        <li><a href="contact.html">Contacto</a></li>
-                                        <li><a href="#">Proyectos</a></li>
+                                        <li><a href="presentacion.html">Presentacion</a></li>
+                                        <li><a href="introduccion.html">Introduccion</a></li>
+                                        <li><a href="problema.html">Problema</a></li>
+                                        <li><a href="relevancia.html">Relevancia</a></li>
                                 </ul>
                         </nav>
                         <div class="header-info">
                                 <div class='header-iconos'>
                                         <i class="fab fa-github-square"></i>
-                                        <i class="fab fa-react"></i>
-                                        <i class="fab fa-twitter"></i>
-                                        <i class="fas fa-camera"></i>
                                 </div>
-                                <h1 class="title">Andres Camilo Plaza Jimenez</h1>
-                                <p class="p">Programador</p>
+                                <h1 class="title">David Santiago Anacona Castellanos</h1>
+                                <h1 class="title">Luis Alberto Diuche Peña</h1>
+                                <h1 class="title">Nicol Dayana Galindo Torres</h1>
+                                <p class="p">Practicas de Ingenieria</p>
                         </div>
                 </section>
         </body>
