--- a/relevancia.html
+++ b/relevancia.html
@@ -61,7 +61,7 @@
             Por otra parte, las empresas que se dedican a extraer criptomonedas y que lo hacen
             de manera legal se verían afectadas, ya que su competencia tendría una gran ventaja
             y un inmenso margen de ganancia.
-            El anterior problema mencionada tiene una gran relevancia en el campo de la
+            El anterior problema mencionado tiene una gran relevancia en el campo de la
             ingeniería de sistemas ya que para infectar los dispositivos utiliza como fachada
             páginas web muy bien diseñadas las cuales se parecen a páginas de empresas
             reconocidas al igual que programas de descarga, al estar en un contexto de las TIC
