--- a/presentacion.html
+++ b/presentacion.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-sm">
                     <div class="card" style="width: 18rem;">
-                        <img src="img/luis.PNG" class="card-img-top" alt="...">
+                        <img src="img/luis1.PNG" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Luis Alberto Diuche Peña</h5>
                             <p class="card-text">Tengo 19 años, anteriormente hice un técnico en programación de
