--- a/introduccion.html
+++ b/introduccion.html
@@ -26,6 +26,8 @@
                                         <li><a href="#">Introduccion</a></li>
                                         <li><a href="problema.html">Problema</a></li>
                                         <li><a href="relevancia.html">Relevancia</a></li>
+                                        <li><a href="segundoAvance.html">Segundo Avance</a></li>
+                                        <li><a href="objetivos.html">Objetivos</a></li>
                                 </ul>
                         </nav>
                         <div class="header-info">
