--- a/relevancia.html
+++ b/relevancia.html
@@ -29,6 +29,8 @@
                 <li><a href="introduccion.html">Introduccion</a></li>
                 <li><a href="problema.html">Problema</a></li>
                 <li><a href="">Relevancia</a></li>
+                <li><a href="segundoAvance.html">Segundo Avance</a></li>
+                <li><a href="objetivos.html">Objetivos</a></li>
             </ul>
         </nav>
         <div class="header-info">
