--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
                 <link rel="icon" type="image/png" href="img/anonimo.png" />
                 <meta charset="UTF-8">
-                <title>Cryptojacking-inicio</title>
+                <title>Cryptojacking-Hello</title>
                 <!--iconos -->
                 <!-- reference your copy Font Awesome here (from our CDN or by hosting yourself) -->
                 <script src="https://kit.fontawesome.com/3809a1fb59.js" crossorigin="anonymous"></script>
