Cambio en la introducción

--- a/introduccion.html
+++ b/introduccion.html
@@ -42,7 +42,7 @@
                     <h1 class="titulo">Introduccion</h1>
                     <p class="text"> El cryptojacking es un plan para utilizar
                         los dispositivos de otras
-                        personas (ordenadores, teléfonos inteligentes, tabletas o incluso servidores), sin su
+                        personas y/o empresas (ordenadores, teléfonos inteligentes, tabletas o incluso servidores), sin su
                         consentimiento ni su conocimiento, para extraer criptomonedas subrepticiamente a
                         costa de la víctima. En lugar de construir un ordenador dedicado a la minería, los
                         hackers utilizan el cryptojacking para robar
